kubernetes/1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system
  namespace: solar-system
  labels:
    app: solar-system
spec:
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30080
  selector:
    app: solar-system
